--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next -p 8080",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "npm run build && next export "
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
